$Id$

2015-10-20  Christian Franke  <franke@computer.org>

	Reduce variable scope where possible (cppcheck: variableScope).

	Makefile.am: Remove *.s from files used to generate svnversion.h.

2015-10-18  Alex Samorukov <samm@os2.kiev.ua>

	fixes suggested by cppcheck:
	Check realloc result to avoid memory leak (memleakOnRealloc)
	Fix printf() signednsess (invalidPrintfArgType_sint)

2015-10-17  Christian Franke  <franke@computer.org>

	Various fixes suggested by cppcheck:
	Close FILE pointer before reopening it (cppcheck: publicAllocationError).
	Add missing member initializations to ctors (cppcheck: uninitMemberVar).
	Remove redundant nullptr check (cppcheck: nullPointerRedundantCheck).
	Remove redundant assignments (cppcheck: redundantAssignment).
	Clarify calculation precedence (cppcheck: clarifyCalculation).
	Use C++-style casts for pointer types (cppcheck: cstyleCast).
	Remove duplicate on both sides of '||' (cppcheck: duplicateExpression).
	Declare ctors with one argument as 'explicit'
	(cppcheck: noExplicitConstructor).
	Remove unread variables and assignments (cppcheck: unreadVariable).
	Fix signedness of sscanf() formats strings
	(cppcheck: invalidScanfArgType_int).

2015-10-14  Christian Franke  <franke@computer.org>

	configure.ac: Disable os_solaris_ata.o by default.
	Add --with-solaris-sparc-ata option to enable.
	Makefile.am: Exclude os_solaris_ata.s from source tarball
	(Debian bug 729842).
	os_solaris.cpp: Check for WITH_SOLARIS_SPARC_ATA instead of __sparc.

2015-10-13  Christian Franke  <franke@computer.org>

	Makefile.am: Fix error handling in various shell scripts.

2015-10-13  Casper Dik  <...>

	os_solaris.cpp: Detect SATA devices as SCSI devices.  This adds
	support for auto detection of SATA devices behind SAT layer.
	Set USCSI_SILENT flag to suppress /dev/console messages on command
	error.

2015-10-11  Christian Franke  <franke@computer.org>

	drivedb.h: SiliconMotion based SSDs: Transcend SSD370S, SSD420,